<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/heavy_blue"
    tools:context="com.victorlaerte.wavesproject.view.activities.LoginActivity" >

    <ScrollView
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dip"
        android:fillViewport="true"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical">
    
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:gravity="center"
	        android:orientation="vertical"
	        android:weightSum="1" >

	        <ImageView
	            android:id="@+id/imageLogo"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:src="@drawable/logo" />
	
	        <TextView
	             android:id="@+id/infoLabel"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:layout_gravity="center"
	             android:typeface="serif"
	             android:textColor="@color/white"
	             android:textSize="@dimen/login_message"
	             android:layout_marginBottom="40dp"/>
	        
			<ProgressBar
	             android:id="@+id/loginPogress"
	             style="?android:attr/progressBarStyleLarge"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:layout_gravity="center"
	             android:layout_marginTop="10dp"
	             android:visibility="gone"/>
	
	        <TextView
	             android:id="@+id/loginLabel"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:layout_gravity="center"
	             android:text="@string/loading"
	             android:visibility="gone" />
	        
	        <com.facebook.widget.LoginButton
	            android:id="@+id/authButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:layout_marginTop="20dp"
	            facebook:login_text="@string/facebook_button"
	        	facebook:confirm_logout="false"
	        	facebook:fetch_user_info="true"
			/>
	
	        <Button
	            android:id="@+id/anonymousModeBtn"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_marginTop="40dp"
	            android:textColor="@color/white"
				android:textSize="18sp"
	            android:background="@drawable/lightbuttonshape"
	            android:text="@string/anonymous_mode" />
        
    	</LinearLayout>
        
    </ScrollView>
    
</RelativeLayout>