<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="horizontal|vertical">
        
        <LinearLayout
            android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="vertical"
	        android:gravity="center_horizontal" >
	        
            <TextView
            android:id="@+id/chooseTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />
            
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:gravity="center_horizontal"
		        android:id="@+id/selectionLayout" >
		
		        <TextView
		            android:id="@+id/selectStateLabel"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/select_state"
		            android:textColor="@color/white"
		            android:textAppearance="?android:attr/textAppearanceLarge"
		            android:layout_marginTop="20dp" />
		        
		        <Spinner
		            android:id="@+id/stateSpinner"
		    		android:layout_width="wrap_content"
		   			android:layout_height="wrap_content"
		    		android:layout_gravity="center"
		    		android:gravity="center"
		    		android:layout_marginTop="10dp"
		    		android:background="@color/heavy_blue"
		    		android:popupBackground="@color/heavy_blue" />
		        
		        <TextView
		            android:id="@+id/selectCityLabel"
		            android:textColor="@color/white"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/select_city"
		            android:textAppearance="?android:attr/textAppearanceLarge"
		            android:layout_marginTop="50dp"
		            android:visibility="gone" />
		    
		        <Spinner
		            android:id="@+id/citySpinner"
		    		android:layout_width="wrap_content"
		   			android:layout_height="wrap_content"
		   			android:layout_gravity="center"
		    		android:gravity="center"
		    		android:layout_marginTop="10dp"
		    		android:layout_marginBottom="10dp"
		    		android:background="@color/heavy_blue"
		    		android:popupBackground="@color/heavy_blue"
		    		android:visibility="gone" />
		        
		    </LinearLayout>
		    
		    <LinearLayout
		        android:id="@+id/likeUsLayout"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:orientation="horizontal"
		        android:gravity="center"
		        android:layout_marginTop="15dp"
		        android:layout_marginBottom="50dp"
		        android:visibility="gone">
		        
		        <TextView 
		            android:textColor="@color/white"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:text="@string/likeUsOnFacebook"/>
		        
		        <com.facebook.widget.LikeView
			        android:id="@+id/likeView"
			        android:layout_marginStart="10dp"
			        android:layout_marginLeft="10dp"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"/>
		        
		    </LinearLayout>
            
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
